change modal size from auto to small; fix z-index bug; add mobile styling

--- a/src/components/EmailList/EmailList.scss
+++ b/src/components/EmailList/EmailList.scss
@@ -1,9 +1,7 @@
 @use "../../shared/colors";
 
 .email_list__container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+  z-index: 10000;
 
   #email_list__button {
     background-color: white;
@@ -88,6 +86,22 @@
       margin-top: 1rem;
       background-color: #e5e7eb;
       font-weight: 800;
+    }
+  }
+}
+
+@media (max-width: 800px) {
+  .email_list__container {
+    #email_list__button {
+      font-size: 1.2rem;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .email_list__container {
+    #email_list__button {
+      font-size: 1rem;
     }
   }
 }
